# AgentWebscraper

./: README.md  pyproject.toml  report.md  report1.md  report2.md  report3.md  report4.md  report5.md  report6.md
src/agent1/: crew.py  main.py  report5.md  report6.md
src/agent1/config/: agents.yaml  tasks.yaml
