[project]
name = "agent1"
version = "0.1.0"
description = "agent1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
agent1 = "agent1.main:run"
run_crew = "agent1.main:run"
train = "agent1.main:train"
replay = "agent1.main:replay"
test = "agent1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
